# hotaru

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
src/: errors.hpp  main.cpp  printable.hpp  utils.hpp
src/data/: log_record.hpp
src/fio/: file_io.cpp  file_io.hpp  fio.hpp
src/index/: btree.cpp  btree.hpp  index.hpp
test/: CMakeLists.txt  btree_test.cpp  file_io_test.cpp  first_test.cpp
